--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react-dom": "17.x"
   },
   "devDependencies": {
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.15",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.3.2"
   }
 }
