--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "10.x",
     "next-themes": "0.0.14",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
