--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.18.1",
     "@tailwindcss/typography": "^0.4.1",
     "gray-matter": "^4.0.3",
     "next": "10.x",
