--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.18.1",
     "@tailwindcss/typography": "^0.4.1",
+    "firebase": "^8.7.1",
     "gray-matter": "^4.0.3",
     "next": "10.x",
     "next-themes": "0.0.14",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-hook-form": "^7.11.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
